crates/macro-tools/tests/ui/builder/fail/duplicate_default.rs
use picea_macro_tools::Builder;

#[derive(Builder)]
struct Meta {
    #[builder(default, default)]
    value: String,
}

fn main() {}
