crates/macro-tools/tests/ui/builder/fail/duplicate_default.stderr
error: duplicate `default` builder option
 --> tests/ui/builder/fail/duplicate_default.rs:5:24
  |
5 |     #[builder(default, default)]
  |                        ^^^^^^^
